--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.7.5",
+    "fs": "^0.0.1-security",
     "typescript": "^5.6.2"
   },
   "dependencies": {
