--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "openai": "^4.68.1",
+    "synaptic": "^1.1.4"
   }
 }
