--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.21.0",
+    "gmukko.com": "file:",
     "openai": "^4.68.1",
     "synaptic": "^1.1.4"
   }
