--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.5",
     "fs": "^0.0.1-security",
     "typescript": "^5.6.2"
@@ -19,7 +20,9 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.21.0",
+    "fluent-ffmpeg": "^2.1.3",
     "gmukko.com": "file:",
+    "mysql2": "^3.11.3",
     "openai": "^4.68.1",
     "synaptic": "^1.1.4"
   }
