--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.5",
+    "@types/sequelize": "^4.28.20",
     "fs": "^0.0.1-security",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -24,6 +25,7 @@
     "gmukko.com": "file:",
     "mysql2": "^3.11.3",
     "openai": "^4.68.1",
+    "sequelize": "^6.37.4",
     "synaptic": "^1.1.4"
   }
 }
