Added a backup system, and swapped db interaction to staging tables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,7 +101,7 @@
   "include": [
     "*.ts",
     "src/api/*.ts",
-    "src/server.ts",
+    "src/start.ts",
     "services/*.ts"  
   ],
   "exclude": [
