--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/server.js",
+    "start": "tsc && node ./dist/start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.5",
+    "@types/node-cron": "^3.0.11",
     "@types/sequelize": "^4.28.20",
     "fs": "^0.0.1-security",
+    "node-cron": "^3.0.3",
     "typescript": "^5.6.3"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "gmukko.com": "file:",
     "mysql2": "^3.11.3",
+    "mysqldump": "^3.2.0",
     "openai": "^4.68.1",
     "sequelize": "^6.37.4",
     "synaptic": "^1.1.4"
