--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.0",
     "fluent-ffmpeg": "^2.1.3",
     "gmukko.com": "file:",
+    "madge": "^8.0.0",
     "mysql2": "^3.11.3",
     "mysqldump": "^3.2.0",
     "openai": "^4.68.1",
