--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc -p tsconfig.json && node ./dist/src/start.js",
+    "validate": "tsc -p tsconfig.validation_client.json && node ./dist/tools/validation_client/start.js"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +15,18 @@
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.5",
     "@types/node-cron": "^3.0.11",
+    "@types/prompt-sync": "^4.2.3",
     "@types/sequelize": "^4.28.20",
+    "@types/yaml": "^1.9.6",
     "fs": "^0.0.1-security",
     "node-cron": "^3.0.3",
+    "types": "file:../../../../../prompt-sync",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "express": "^4.21.0",
     "fluent-ffmpeg": "^2.1.3",
     "gmukko.com": "file:",
@@ -29,6 +34,7 @@
     "mysql2": "^3.11.3",
     "mysqldump": "^3.2.0",
     "openai": "^4.68.1",
+    "prompt-sync": "^4.2.0",
     "sequelize": "^6.37.4",
     "synaptic": "^1.1.4"
   }
