--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "scripts": {
     "server": "tsc -p tsconfig.json && node ./dist/src/startup/start.js",
-    "client": "tsc -p tsconfig.validation_client.json && node ./dist/tools/test_client/start.js"
+    "client": "tsc -p tsconfig.test_client.json && node ./dist/tools/test_client/start.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/ansi-colors": "^3.2.0",
     "@types/chalk": "^0.4.31",
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.7.5",
     "@types/node-cron": "^3.0.11",
     "@types/prompt-sync": "^4.2.3",
+    "@types/readline-sync": "^1.4.8",
     "@types/sequelize": "^4.28.20",
     "@types/yaml": "^1.9.6",
     "fs": "^0.0.1-security",
@@ -26,6 +28,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "ansi-colors": "^4.1.3",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
     "express": "^4.21.0",
@@ -36,6 +39,7 @@
     "mysqldump": "^3.2.0",
     "openai": "^4.68.1",
     "prompt-sync": "^4.2.0",
+    "readline-sync": "^1.4.10",
     "sequelize": "^6.37.4",
     "synaptic": "^1.1.4"
   }
