--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "gmukko.com": "file:",
     "madge": "^8.0.0",
