--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmukko.com",
+  "name": "liki",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -34,7 +34,7 @@
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "gmukko.com": "file:",
+    "liki": "file:",
     "madge": "^8.0.0",
     "mysql2": "^3.11.3",
     "mysqldump": "^3.2.0",
