--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "server": "tsc -p tsconfig.json && node ./dist/src/startup/start.js",
+    "liki": "tsc -p tsconfig.json && node ./dist/src/startup/start.js",
     "client": "tsc -p tsconfig.test_client.json && node ./dist/tools/test_client/start.js"
   },
   "keywords": [],
@@ -42,6 +42,7 @@
     "prompt-sync": "^4.2.0",
     "readline-sync": "^1.4.10",
     "sequelize": "^6.37.4",
-    "synaptic": "^1.1.4"
+    "synaptic": "^1.1.4",
+    "typescript-json-schema": "^0.65.1"
   }
 }
